# typed-agent-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
agent_sdk/: __init__.py  _utils.py  errors.py  guardrails.py  handoffs.py  hooks.py  permissions.py  query.py  runner.py  session.py  skills.py  system_tools.py  testing.py  transport.py  types.py
docs/: deep-research-report.md  feature-parity-matrix.md
examples/: guardrailed_agent.py  sandbox_backend.py  simple_agent.py
examples/research-agent/: our_sdk_version.py
examples/research-agent/prompts/: data_analyst.txt  lead_agent.txt  report_writer.txt  researcher.txt
examples/skills/: code-reviewer.md  researcher.md
specs/001-agent-sdk-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-agent-sdk-core/checklists/: requirements.md
specs/001-agent-sdk-core/contracts/: public-api.md
tests/: conftest.py  test_execution.py  test_execution_integration.py  test_guardrails.py  test_handoffs.py  test_hooks.py  test_permissions.py  test_query.py  test_session.py  test_skill_markdown.py  test_system_tools.py  test_transport.py  test_types.py  test_utils.py
typed_agent_sdk/: __init__.py  _utils.py  errors.py  execution.py  guardrails.py  handoffs.py  hooks.py  permissions.py  query.py  runner.py  session.py  skills.py  system_tools.py  testing.py  transport.py  types.py
