[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typed-agent-sdk"
version = "0.1.0"
description = "A lightweight, model-agnostic, type-safe agent SDK built on Pydantic AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Faisal Ghaffar" },
]
keywords = ["agent", "sdk", "llm", "pydantic-ai", "hooks", "guardrails", "typed", "model-agnostic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic-ai>=0.2",
    "pydantic>=2.0",
    "typing-extensions>=4.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
telemetry = ["opentelemetry-api>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "ruff>=0.5",
    "coverage>=7.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["typed_agent_sdk"]
